# src/portfolio/dto/update-portfolio.dto.ts
@@ -1,0 +1,6 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreatePortfolioWithImagesAndStandardsDto } from './create-portfolio.dto';
+
+export class UpdatePortfolioDto extends PartialType(
+  CreatePortfolioWithImagesAndStandardsDto,
+) {}
